# wasmedge_wasi_socket

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config.toml
.github/docker/: Dockerfile
.github/workflows/: build.yml  deploy-doc.yml  example.yml  example_0.10.yml  example_0.11.yml  example_0.12.yml  example_0.13.yml  example_0.9.yml  fmt.yml
examples/: README.md  async_tcp_stream.rs  get_addrinfo.rs  nonblock_tcp_stream.rs  poll_tcp_listener.rs  socket_addr.rs  tcp_listener.rs  tcp_stream.rs  try_dns.rs  try_sock_opt.rs  udp_reverse.rs  udp_socket.rs
examples/async_tcp_stream/: Cargo.toml  server.py
examples/http_client/: Cargo.toml  README.md  server.py
examples/http_client/src/: main.rs
examples/http_server/: Cargo.toml  README.md
examples/nonblock_http_client/: Cargo.toml
examples/poll_http_server/: Cargo.toml  README.md
examples/poll_http_server/src/: main.rs
implementors/wasmedge_wasi_socket/: trait.ToSocketAddrs.js
search.desc/wasmedge_wasi_socket/: wasmedge_wasi_socket-desc-0-.js
src/: executor.rs  lib.rs  poll.rs  socket.rs  wasi.rs  wasi_poll.rs
src/runtime/: executor.rs  mod.rs  tcp.rs
src/wasmedge_wasi_socket/: executor.rs.html  lib.rs.html  poll.rs.html  socket.rs.html  wasi.rs.html  wasi_poll.rs.html
trait.impl/wasmedge_wasi_socket/: trait.ToQType.js  trait.ToSocketAddrs.js
wasmedge_wasi_socket/: all.html  constant.FDFLAGS_APPEND.html  constant.FDFLAGS_DSYNC.html  constant.FDFLAGS_NONBLOCK.html  constant.FDFLAGS_RSYNC.html  constant.FDFLAGS_SYNC.html  enum.AddressFamily.html  enum.AiFlags.html  enum.AiProtocol.html  enum.IpAddr.html  enum.Shutdown.html  enum.SocketAddr.html  enum.SocketOptLevel.html  enum.SocketOptName.html  enum.SocketType.html  fn.nslookup.html  fn.nslookup_with_dns_server.html  fn.nslookup_with_host.html  fn.resolve.html  fn.set_fdflag.html  fn.sock_accept.html  fn.sock_bind.html  fn.sock_close.html  fn.sock_connect.html  fn.sock_getaddrinfo.html  fn.sock_getlocaladdr.html  fn.sock_getpeeraddr.html  fn.sock_listen.html  fn.sock_open.html  fn.sock_recv.html  fn.sock_recv_from.html  fn.sock_send.html  fn.sock_send_to.html  fn.sock_setsockopt.html  fn.sock_shutdown.html  fn.unset_fdflag.html  index.html  sidebar-items.js  struct.Incoming.html  struct.IovecRead.html  (+13 more)
wasmedge_wasi_socket/executor/: index.html  struct.Executor.html
wasmedge_wasi_socket/poll/: enum.EventType.html  enum.Interest.html  enum.Subscription.html  fn.poll.html  index.html  sidebar-items.js  struct.Event.html  struct.Poll.html  struct.PollFd.html  struct.Selector.html  struct.Token.html
wasmedge_wasi_socket/socket/: constant.MSG_PEEK.html  constant.MSG_TRUNC.html  constant.MSG_WAITALL.html  enum.AddressFamily.html  enum.AiFlags.html  enum.AiProtocol.html  enum.SocketOptLevel.html  enum.SocketOptName.html  enum.SocketType.html  index.html  sidebar-items.js  struct.IovecRead.html  struct.IovecWrite.html  struct.Socket.html  struct.WasiAddress.html  struct.WasiAddrinfo.html  struct.WasiSockaddr.html
(+89 files in other folders)
