[package]
name = "wasmedge_wasi_socket"
version = "0.4.2"
authors = ["Yi <yi@secondstate.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Rust API for the networking socket functions supported in the WasmEdge Runtime for WebAssembly."
repository = "https://github.com/second-state/wasmedge_wasi_socket"
readme = "README.md"
categories = ["network-programming"]
keywords = ["http", "tcp", "socket", "webassembly", "wasmedge"]

[lib]
name = "wasmedge_wasi_socket"
path = "src/lib.rs"

[dependencies]
libc = "0.2.3"

[features]
default = ["wasmedge_0_10"]
wasmedge_0_9 = []
wasmedge_0_10 = []
wasi_poll = []
wasmedge_asyncify = []
