[package]
name = "wasmedge_wasi_socket"
version = "0.5.0"
authors = ["Yi <yi@secondstate.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Rust API for the networking socket functions supported in the WasmEdge Runtime for WebAssembly."
repository = "https://github.com/second-state/wasmedge_wasi_socket"
readme = "README.md"
categories = ["network-programming"]
keywords = ["http", "tcp", "socket", "webassembly", "wasmedge"]

[lib]
name = "wasmedge_wasi_socket"
path = "src/lib.rs"

[dependencies]
bytes = "1.4.0"
dns-parser = "0.8.0"
libc = "0.2.3"
rand = "0.8.5"

[features]
default = ["built-in-dns", "wasmedge_0_12"]
wasmedge_0_12 = []
built-in-dns = []
wasi_poll = []
epoll = []
