[package]
name = "http_client"
version = "0.1.0"
authors = ["csh", "LI Rui <me@lirui.tech>"]
edition = "2021"
exclude = ["server.py"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge_http_req  = "0.8.1"
wasmedge_wasi_socket = {path = "../.."}