[package]
name = "poll_http_server"
version = "0.1.0"
edition = "2021"
authors = ["LI Rui <me@lirui.tech>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge_wasi_socket = { path = "../../" }
parsed = { version = "0.3.0", features = ["http"] }